Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-17141

QmlProfiler: Profiling on iOS device or simulator fails

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • Qt Creator 4.2.0-rc1
    • Qt Creator 4.2.0-beta1
    • QML Profiler
    • OSX 10.11, Xcode 7.1, Qt 5.7 for iOS, QC 4.2 beta snapshot
    • c0ff0b72378d2d0d5aca06cb1d1a5b6fe31dac48 779c54872a7f8d6d29fbee661636626783730060 10ddde412581df0a5353691632b347ee6d78c5ed

      Steps to reproduce:

      • have a Qt for iOS set up including respective kits
      • create a Quick Application from template
      • switch to Debug, select Qml Profiler
      • start profiling

      Current result:

      • message box comes up with
        Could not connect to the in-process QML profiler.
        Do you want to retry?
      • pressing Retry does not help

      Content of Application Output:

      created qml server
      QML debugging is enabled. Only use this in a safe environment.
      JIT is disabled for QML. Property bindings and animations will be very slow. Visit https://wiki.qt.io/V4 to learn about possible solutions for your platform.
      QML Debugger: Waiting for connection on port 59910...
      Run ended with error.
      

      Content of General Messages:

      QML Profiler: Resolving host
      QML Profiler: Establishing network connection...
      QML Profiler: Debug connection failed
      QML Profiler: Resolving host
      QML Profiler: Establishing network connection...
      QML Profiler: Resolving host
      QML Profiler: Establishing network connection...
      QML Profiler: Debug connection failed
      QML Profiler: Resolving host
      QML Profiler: Establishing network connection...
      Failed to connect!
      

      Note1: Same applies for using simulator.
      Note2: (Mixed) Debugging on the device / simulator works.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ulherman Ulf Hermann
            cstenger Christian Stenger
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes