IosTool: Don't restrict the number of pending connections

Apparently a failed connection counts as "pending" for a while before
it is finally removed. The QML profiler aggressively tries to connect
with different timeouts and multiple sockets, so quite often there is
such a failed connection which then prevents new connections from
getting established.

We already enforce the limit of only one successful connection via the
SingleRelayServer subclass.

Change-Id: I441e2ed898d28f04359a9976d5b25569b8447f3f
Task-number: QTCREATORBUG-17141
Reviewed-by: Christian Stenger <christian.stenger@qt.io>